# sensors-data-pipeline

./: .gitignore  Dockerfile  Pipfile  README.md  SOLUTION.md  docker-compose.yml  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: github-actions.yaml
config/: .env
migrations_db/: alembic.ini  env.py
migrations_db/versions/: e04fa31c612e_initialize_sensor_info_table.py
migrations_timescale_db/: alembic.ini  env.py
migrations_timescale_db/versions/: 56dbb826d186_initialize_sensor_measurement_table.py  d54dd842aaf1_add_unique_constraint_to_sensor_.py  da56513f0563_make_timestamp_timezone_aware.py
src/sensors_data_pipeline/: main.py  service_factory.py  settings.py
src/sensors_data_pipeline/db/: main.py  repository.py
src/sensors_data_pipeline/db/models/main/: sensor_info.py
src/sensors_data_pipeline/db/models/timescale/: sensor_measurement.py
src/sensors_data_pipeline/domain/: service.py  validators.py
src/sensors_data_pipeline/utils/: minio_client.py  settings.py
tests/unit/: conftest.py  test_service.py  test_utils.py
