[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sensors-data-pipeline"
version = "1.0.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ingest-sensors-data-from-storage = "sensors_data_pipeline.main:ingest_sensors_data_from_storage"
retrieve-sensor-readings ="sensors_data_pipeline.main:retrieve_sensor_readings"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503"]
